--- a/theme.conf
+++ b/theme.conf
@@ -148,7 +148,7 @@
 16/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 16/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg
 16/mimetypes application-x-bit.svg application-x-bittorrent.svg
-16/mimetypes application-x-cd-image.svg
+16/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 16/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
 16/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 16/mimetypes application-x-rpm.svg
@@ -166,7 +166,7 @@
 16/mimetypes application-x-php.svg
 16/mimetypes application-x-desktop.svg
 16/mimetypes application-x-m4.svg
-16/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+16/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 16/mimetypes application-x-object.svg
 16/mimetypes application-x-sharedlib.svg so.svg
 16/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
@@ -591,7 +591,7 @@
 22/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 22/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
 22/mimetypes application-x-bit.svg application-x-bittorrent.svg
-22/mimetypes application-x-cd-image.svg
+22/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 22/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
 22/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 22/mimetypes application-x-rpm.svg
@@ -609,7 +609,7 @@
 22/mimetypes application-x-php.svg
 22/mimetypes application-x-desktop.svg
 22/mimetypes application-x-m4.svg
-22/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+22/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 22/mimetypes application-x-object.svg
 22/mimetypes application-x-sharedlib.svg so.svg
 22/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
@@ -1034,7 +1034,7 @@
 24/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 24/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
 24/mimetypes application-x-bit.svg application-x-bittorrent.svg
-24/mimetypes application-x-cd-image.svg
+24/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 24/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
 24/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 24/mimetypes application-x-rpm.svg
@@ -1052,7 +1052,7 @@
 24/mimetypes application-x-php.svg
 24/mimetypes application-x-desktop.svg
 24/mimetypes application-x-m4.svg
-24/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+24/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 24/mimetypes application-x-object.svg
 24/mimetypes application-x-sharedlib.svg so.svg
 24/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
@@ -1498,7 +1498,7 @@
 32/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 32/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
 32/mimetypes application-x-bit.svg application-x-bittorrent.svg
-32/mimetypes application-x-cd-image.svg
+32/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 32/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg 
 32/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 32/mimetypes application-x-rpm.svg
@@ -1516,7 +1516,7 @@
 32/mimetypes application-x-php.svg
 32/mimetypes application-x-desktop.svg
 32/mimetypes application-x-m4.svg
-32/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+32/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 32/mimetypes application-x-object.svg
 32/mimetypes application-x-sharedlib.svg so.svg
 32/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
@@ -1945,7 +1945,7 @@
 48/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 48/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
 48/mimetypes application-x-bit.svg application-x-bittorrent.svg
-48/mimetypes application-x-cd-image.svg
+48/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 48/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
 48/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 48/mimetypes application-x-rpm.svg
@@ -1963,7 +1963,7 @@
 48/mimetypes application-x-php.svg
 48/mimetypes application-x-desktop.svg
 48/mimetypes application-x-m4.svg
-48/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+48/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 48/mimetypes application-x-object.svg
 48/mimetypes application-x-sharedlib.svg so.svg
 48/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
@@ -2386,7 +2386,7 @@
 64/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 64/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
 64/mimetypes application-x-bit.svg application-x-bittorrent.svg
-64/mimetypes application-x-cd-image.svg
+64/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 64/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
 64/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 64/mimetypes application-x-rpm.svg
@@ -2404,7 +2404,7 @@
 64/mimetypes application-x-php.svg
 64/mimetypes application-x-desktop.svg
 64/mimetypes application-x-m4.svg
-64/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+64/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 64/mimetypes application-x-object.svg
 64/mimetypes application-x-sharedlib.svg so.svg
 64/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
@@ -2822,7 +2822,7 @@ scalable/mimetypes application-vnd.ms-excel.svg
 scalable/mimetypes application-vnd.ms-office.svg application-vnd.msoffice.svg application-msword.svg application-vnd.openxmlformats-officedocument.wordprocessingml.document.svg application-vnd.oasis.opendocument.text.svg application-vnd.oasis.opendocument.text-web.svg x-office-document.svg
 scalable/mimetypes application-vnd.ms-powerpoint.svg application-vnd.openxmlformats-officedocument.presentationml.presentation.svg application-vnd.openxmlformats-officedocument.presentationml.slideshow.svg x-office-presentation.svg
 scalable/mimetypes application-x-bit.svg application-x-bittorrent.svg
-scalable/mimetypes application-x-cd-image.svg
+scalable/mimetypes application-x-cd-image.svg application-vnd.efi.iso.svg
 scalable/mimetypes application-x-compressed-tar.svg application-x-tar.svg application-x-xz-compressed-tar.svg application-x-bzip-compressed-tar.svg application-tar.svg application-x-zstd-compressed-tar.svg
 scalable/mimetypes application-x-compressed.svg application-x-bzip.svg application-x-rar.svg application-7zip.svg application-x-7z-compressed.svg application-x-archive.svg application-x-xz.svg application-x-gzip.svg application-gzip.svg package-x-generic.svg package.svg gz.svg application-x-zstd.svg application-x-archlinux-package-xz.svg application-x-archlinux-package-zstd.svg application-x-archlinux-package-zst.svg application-x-voidlinux-package.svg
 scalable/mimetypes application-x-rpm.svg
@@ -2840,7 +2840,7 @@ scalable/mimetypes application-x-java.svg application-x-jar.svg application-x-ja
 scalable/mimetypes application-x-php.svg
 scalable/mimetypes application-x-desktop.svg
 scalable/mimetypes application-x-m4.svg
-scalable/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg
+scalable/mimetypes application-x-raw-disk-image.svg application-x-img.svg application-x-qemu-disk.svg application-vnd.efi.img.svg
 scalable/mimetypes application-x-object.svg
 scalable/mimetypes application-x-sharedlib.svg so.svg
 scalable/mimetypes application-x-shellscript.svg text-x-shellscript.svg text-x-script.svg
